# CPAsim

./: CMakeLists.txt  README.md
examples/: and.cpa  d.cpa  demux4.cpa  mux4.cpa  not.cpa  sr.cpa  xor.cpa
src/: expr.h  main.cpp  module.cpp  module.h  or.cpa  parser.cpp  parser.h  wires.h
src/module/: modulevalues.cpp  modulevalues.h
src/wire/: wiredecl.h  wireusage.h  wirevalue.h
